# AI-Agent-OCR

./: .gitignore  README.md  app.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
backend/: app.py
backend/configs/: agents.yaml
backend/server/: plot_mcp_server.py
backend/src/: agents_runner.py  config_builder.py  file_manager.py  preprocessor.py
backend/src/agents/: agents_factory.py  agents_runner.py  output_validator.py
backend/src/server/: download_data_mcp_server.py  download_server.py  plot_mcp_server.py  plot_server.py
backend/src/utils/: data_models.py  db_handler.py  output_validator.py  sqlite_db_handler.py
configs/: agents.yaml
docs/: backend_routes.md  routes.md
src/: agents_creator.py  agents_runner.py  config_builder.py
src/utils/: data_models.py  output_validator.py  sqlite_db_handler.py
streamlit-app/: main.py  startup.sh
streamlit-app/.streamlit/: pages_sections.toml
streamlit-app/src/: agent_configurations.py  generate_plot.py  parent_run.py  run_ai_agent_ocr.py  run_single_agent.py
streamlit-app/src/backend_client/: ollama_retriever.py  request_be.py  response_be.py
streamlit-app/src/plot_agent_client/: request_be.py  response_be.py
