[project]
name = "ai-agent-ocr"
version = "0.1.0"
description = "AI Agent OCR backend and Streamlit app"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "AI-Agent-OCR Maintainers" }
]

# Application dependencies
dependencies = [
  "fastapi",
  "loguru",
  "uvicorn",
  "pydantic-ai",
  "pandas",
  "pyaml",
  "pillow",
  "matplotlib",
  "streamlit",
  "st_pages",
  "pyyaml",
  "multipledispatch",
  "yfinance",
]

[project.optional-dependencies]
# Developer tooling
dev = [
  "mypy",
  "ruff",
]
